Finalizado as configuração e criado a tela de login.

--- a/canarinho_again_app/pubspec.yaml
+++ b/canarinho_again_app/pubspec.yaml
@@ -33,3 +33,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/canarinhoagain/images/logo_canarinho.png
+    - assets/canarinhoagain/images/wallpaper_canarinho.jpg
