--- a/canarinho_again_app/android/app/build.gradle
+++ b/canarinho_again_app/android/app/build.gradle
@@ -21,9 +21,12 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+// Migrando para o uso declarativo de plugins
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'io.flutter' // Substitui 'apply from'
+}
 
 android {
     compileSdkVersion flutter.compileSdkVersion
@@ -43,10 +46,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.qualidade_app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -55,25 +55,23 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
             applicationVariants.all { variant ->
                 variant.outputs.all {
-                  def buildName
-                  switch (variant.buildType.name) {
-                    case 'debug':
-                      buildName = "-debug"
-                      break;
-                    case 'profile':
-                      buildName = "-profile"
-                      break;
-                    case 'release':
-                    default:
-                      buildName = ""
-                      break;
-                  }
-                  outputFileName = "canarinho_again_v${defaultConfig.versionName}${buildName}.apk"
+                    def buildName
+                    switch (variant.buildType.name) {
+                        case 'debug':
+                            buildName = "-debug"
+                            break;
+                        case 'profile':
+                            buildName = "-profile"
+                            break;
+                        case 'release':
+                        default:
+                            buildName = ""
+                            break;
+                    }
+                    outputFileName = "canarinho_again_v${defaultConfig.versionName}${buildName}.apk"
                 }
             }
         }
