--- a/canarinho_again_app/pubspec.yaml
+++ b/canarinho_again_app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   badges: ^3.1.1
   get_it: ^7.2.0
   flutter_keyboard_visibility: ^6.0.0
+  fl_chart: ^0.69.0
+  syncfusion_flutter_charts: ^20.3.61
 
 dev_dependencies:
   # flutter_test:
